# StockReview2

./: .cursorrules  .gitignore  LICENSE  scan_performance.html
AlphaRadar/: README.md  config.yaml  pyproject.toml  requirements.txt  run_alpharadar.bat  setup.bat
AlphaRadar/src/: debug_network.py  main.py  垃圾股筛选标准.md  复杂形态识别因子.md  生成基础量化因子库.md
AlphaRadar/src/controller/: backtest_service.py  data_maintenance_service.py  scanner_service.py  sentinel_service.py  worker.py
AlphaRadar/src/model/: backtest_adapter.py  complex_patterns.py  data_filter.py  data_nexus.py  db_manager.py  factor_engine.py  pattern_recognizer.py  research_agent.py  risk_manager.py  strategies.py  technical_factors.py  watchlist_service.py  wyckoff_math.py
AlphaRadar/src/view/: flow_layout.py  kline_chart.py  watchlist_tab.py
AlphaRadar/src/view/assets/: styles.qss
logs/: scan_performance.html
